# node-dectalk

./: .gitignore  CMakeLists.txt  README.md  package.json  test.ts  tsconfig.json
dectalk/ports/emscripten/src/: App.d.ts  App.js  index.js
dectalk/ports/emscripten/src/components/SpeakNavbar/: index.d.ts  index.js
dectalk/ports/emscripten/src/components/SpeakWindow/: index.d.ts  index.js
dectalk/src/: configure
dectalk/src/autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
dectalk/src/dapi/src/api/: ttsapi.c
dectalk/src/docsosf/html/: dectalk.hhc
dic/: dtalk_us_1997.dic  dtalk_us_2002.dic  dtalk_us_s_1997.dic  dtalk_us_s_1998.dic
docs/: index.html  modules.html
docs/assets/: search.js
docs/classes/: DecTalk.html  TTSBuffer.html
docs/enums/: DeviceID.html  DeviceManagement.html  LogType.html  MMSysError.html  Message.html  Speaker.html  WaveFormat.html
docs/interfaces/: LanguageParams.html  TTSCaps.html  TTSIndex.html  TTSPhoneme.html
docs/types/: TTSCallback.html
src/: DecTalk.cc  DecTalk.h  LanguageParamsTag.cc  LanguageParamsTag.h  TTSBufferTag.cc  TTSBufferTag.h  TTSCapsTag.cc  TTSCapsTag.h  TTSIndexTag.cc  TTSIndexTag.h  TTSPhonemeTag.cc  TTSPhonemeTag.h  index.cc  index.ts
